// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Response Component should render snapshot when image is available 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
  >
    <button
      class="MuiButtonBase-root makeStyles-root-104"
      tabindex="0"
      type="button"
    >
      <div
        class="makeStyles-buttonContent-111"
      >
        <div
          class="makeStyles-imageContainer-105"
        >
          <img
            src="img.png"
          />
        </div>
        <div
          class="MuiGrid-root makeStyles-text-109 MuiGrid-container MuiGrid-wrap-xs-nowrap"
        >
          <div
            class="MuiGrid-root makeStyles-key-108 MuiGrid-item"
          >
            <p
              class="MuiTypography-root makeStyles-type-110 MuiTypography-body1 MuiTypography-colorInherit"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <p
              class="MuiTypography-root makeStyles-type-110 MuiTypography-body1 MuiTypography-colorInherit"
            >
              example text
            </p>
          </div>
        </div>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Response Component should render snapshot when image is not available 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <button
      class="MuiButtonBase-root makeStyles-root-258"
      tabindex="0"
      type="button"
    >
      <div
        class="MuiBox-root MuiBox-root-266 makeStyles-key-259"
      />
      <div
        class="MuiBox-root MuiBox-root-267 makeStyles-text-261"
      >
        example text
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
